--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,15 @@
-body {
-    background-color: #D5E1EF;
-}
-
 #root {
-  max-width: 1280px;
+  max-width: 22em;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 1em;
 }
+
 #qr-code {
-    border-radius: 20px;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+    border-radius: 1em;
+    max-width: 22em;
 }
 
 .card {
